2012-06-14  Roland McGrath  <roland@hack.frob.com>

	* manual/Makefile ($(objpfx)texis): Do $(make-target-directory).

2012-06-14  Joseph Myers  <joseph@codesourcery.com>

	* libm_test.inc (csqrt_test): Allow more spurious underflow
	exceptions.
	(j0_test): Likewise.
	(j1_test): Likewise.
	(y0_test): Likewise.
	(y1_test): Likewise.

2012-06-13  Carlos O'Donell  <carlos_odonell@mentor.com>

	* po/Makefile (libc.pot): Use UTF-8 charset.

2012-06-13  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #14210]
	Suppress sign-conversion warning from FD_SET.
	See <http://sourceware.org/ml/libc-alpha/2012-05/msg01794.html>.
	* debug/fdelt_chk.c (__fdelt_chk): Accept and return long int,
	not unsigned long int.
	* misc/bits/select2.h (__fdelt_chk, __fdelt_warn, __FD_ELT): Likewise.

2012-06-12  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14050]
	[BZ #14117]
	* sysdeps/i386/fpu/bits/mathinline.h (__MATH_INLINE): Check
	__extern_always_inline instead of __extern_inline.
	(__signbitf): Support __SSE2_MATH__ and C++ namespace.
	(__signbit): Likewise.
	(__signbitl): Support C++ namespace.
	(lrintf): New inline function.
	(lrint): Likewise.
	(llrintf): Likewise.
	(llrint): Likewise.
	(fmaxf): Likewise.
	(fmax): Likewise.
	(fminf): Likewise.
	(fmin): Likewise.
	(rint): Likewise.
	(rintf): Likewise.
	(ceil): Likewise.
	(ceilf): Likewise.
	(floor): Likewise.
	(floorf): Likewise.
	(nearbyint): Likewise.
	(nearbyintf): Likewise.

2012-06-12  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/unix/Makefile ($(objpfx)stub-syscalls.c): Fix case for
	non-default versions.

2012-06-11  Roland McGrath  <roland@hack.frob.com>

	[BZ #14218]
	* manual/argp.texi (Argp): Reword argp_parse description slightly.

2012-06-09  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/sh/sh4/fpu/bits/fenv.h (__FE_UNDEFINED): Define.
	(FE_UPWARD, FE_DOWNWARD): Don't define.
	* sysdeps/sh/sh4/fpu/fegetround.c (fegetround): Adapt to that.
	* sysdeps/sh/sh4/fpu/fesetround.c (fesetround): Likewise.
